# ozz-animation-rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.circleci/: config.yml
.github/workflows/: main.yml
demo/: Cargo.toml
demo/src/: base.rs  blend.rs  main.rs  playback.rs  root_motion.rs  two_bone_ik.rs
expected/additive/: additive+0.00.rkyv  additive+0.10.rkyv  additive+0.20.rkyv  additive+0.30.rkyv  additive+0.40.rkyv  additive+0.50.rkyv  additive+0.60.rkyv  additive+0.70.rkyv  additive+0.80.rkyv  additive+0.90.rkyv  additive+1.00.rkyv  additive+1.10.rkyv  additive-0.10.rkyv  additive_init.rkyv
expected/blend/: blend+0.00.rkyv  blend+0.10.rkyv  blend+0.20.rkyv  blend+0.30.rkyv  blend+0.40.rkyv  blend+0.50.rkyv  blend+0.60.rkyv  blend+0.70.rkyv  blend+0.80.rkyv  blend+0.90.rkyv  blend+1.00.rkyv  blend+1.10.rkyv  blend-0.10.rkyv  blend_+0.00.bincode  blend_+0.10.bincode  blend_+0.20.bincode  blend_+0.30.bincode  blend_+0.40.bincode  blend_+0.50.bincode  blend_+0.60.bincode  blend_+0.70.bincode  blend_+0.80.bincode  blend_+0.90.bincode  blend_+1.00.bincode  blend_+1.10.bincode  blend_-0.10.bincode
expected/context/: additive_curl_contexts.rkyv  additive_splay_contexts.rkyv  blending_contexts.rkyv  playback_contexts.rkyv
expected/look_at/: look_at_00.rkyv  look_at_01.rkyv  look_at_02.rkyv  look_at_03.rkyv  look_at_04.rkyv  look_at_05.rkyv  look_at_06.rkyv  look_at_07.rkyv  look_at_08.rkyv  look_at_09.rkyv  look_at_10.rkyv  look_at_ik_00.rkyv  look_at_ik_01.rkyv  look_at_ik_02.rkyv  look_at_ik_03.rkyv  look_at_ik_04.rkyv  look_at_ik_05.rkyv  look_at_ik_06.rkyv  look_at_ik_07.rkyv  look_at_ik_08.rkyv  look_at_ik_09.rkyv  look_at_ik_10.rkyv
expected/motion_blend/: motion_blend+0.00.rkyv  motion_blend+0.10.rkyv  motion_blend+0.20.rkyv  motion_blend+0.30.rkyv  motion_blend+0.40.rkyv  motion_blend+0.50.rkyv  motion_blend+0.60.rkyv  motion_blend+0.70.rkyv  motion_blend+0.80.rkyv  motion_blend+0.90.rkyv  motion_blend+1.00.rkyv  motion_blend+1.10.rkyv  motion_blend-0.10.rkyv
expected/partial_blend/: partial_blend+0.00.rkyv  partial_blend+0.10.rkyv  partial_blend+0.20.rkyv  partial_blend+0.30.rkyv  partial_blend+0.40.rkyv  partial_blend+0.50.rkyv  partial_blend+0.60.rkyv  partial_blend+0.70.rkyv  partial_blend+0.80.rkyv  partial_blend+0.90.rkyv  partial_blend+1.00.rkyv  partial_blend+1.10.rkyv  partial_blend-0.10.rkyv
expected/playback/: playback+0.00.rkyv  playback+0.10.rkyv  playback+0.20.rkyv  playback+0.30.rkyv  playback+0.40.rkyv  playback+0.50.rkyv  playback+0.60.rkyv  playback+0.70.rkyv  playback+0.80.rkyv  playback+0.90.rkyv  playback+1.00.rkyv  playback+1.10.rkyv  playback-0.10.rkyv  playback_+0.00.bincode  playback_+0.10.bincode  playback_+0.20.bincode  playback_+0.30.bincode  playback_+0.40.bincode  playback_+0.50.bincode  playback_+0.60.bincode  playback_+0.70.bincode  playback_+0.80.bincode  playback_+0.90.bincode  playback_+1.00.bincode  playback_+1.10.bincode  playback_-0.10.bincode
expected/track/: track_sampling.rkyv  track_triggering.rkyv
expected/two_bone_ik/: two_bone_ik_00.rkyv  two_bone_ik_01.rkyv  two_bone_ik_02.rkyv  two_bone_ik_03.rkyv  two_bone_ik_04.rkyv  two_bone_ik_05.rkyv  (+5 more)
src/: animation.rs  archive.rs  base.rs  blending_job.rs  endian.rs  ik_aim_job.rs  ik_two_bone_job.rs  lib.rs  local_to_model_job.rs  math.rs  motion_blending_job.rs  nodejs.rs  sampling_job.rs  skeleton.rs  skinning_job.rs  test_helper.rs  test_utils.rs  track.rs  track_sampling_job.rs  track_triggering_job.rs
tests/: additive.rs  blend.rs  common.rs  context.rs  look_at.rs  motion_blend.rs  partial_blend.rs  playback.rs  save_to_expected.rs  track.rs  two_bone_ik.rs  warnings.rs
(+25 files in other folders)
