[package]
name = "ozz-animation-rs"
version = "0.7.0"
authors = ["SlimeYummy <zzzcccnnn@outlook.com>"]
edition = "2021"
rust-version = "1.75"
description = "A rust runtime library for ozz-animation with cross-platform deterministic."
license = "MPL-2.0"
homepage = "https://github.com/SlimeYummy/ozz-animation-rs"
repository = "https://github.com/SlimeYummy/ozz-animation-rs"
keywords = ["animation", "skeletal-animation", "fixed-point", "deterministic", "ozz-animation"]
categories = ["game-development", "rendering::data-formats", "api-bindings"]
exclude = ["/.circleci", "/.github", "/expected", "/output", "/resource"]
resolver = "2"

[features]
default = ["bincode"]
bincode = ["dep:bincode"]

[dependencies]
bincode = { version = "2.0.0-rc.3", optional = true }
glam = "0.24"
static_assertions = "1.1.0"
thiserror = "1.0.52"
