[package]
name = "ozz-animation-rs"
version = "0.9.0"
authors = ["SlimeYummy <zzzcccnnn@outlook.com>"]
edition = "2021"
rust-version = "1.75"
description = "A rust runtime library for ozz-animation with cross-platform deterministic."
license = "MPL-2.0"
homepage = "https://github.com/SlimeYummy/ozz-animation-rs"
repository = "https://github.com/SlimeYummy/ozz-animation-rs"
keywords = ["animation", "skeletal-animation", "fixed-point", "deterministic", "ozz-animation"]
categories = ["game-development", "rendering::data-formats", "api-bindings", "wasm"]
exclude = ["/.circleci", "/.github", "/demo", "/expected", "/output", "/resource"]
resolver = "2"

[features]
default = ["rkyv"]
rkyv = ["dep:rkyv", "dep:bytecheck", "glam/rkyv", "glam/bytecheck"]
wasm = []
nodejs = ["wasm", "dep:js-sys", "dep:wasm-bindgen"]

[dependencies]
bytecheck = { version = "0.6", optional = true, default-features = false }
glam = { version = "0.25", features = [ "core-simd", "libm" ] }
js-sys = { version = "0.3", optional = true }
rkyv = { version = "0.7.43", optional = true, features = [ "validation" ] }
static_assertions = "1.1"
thiserror = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
miniz_oxide = "0.7"
wasm-bindgen-test = "0.3"
